--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -383,6 +383,16 @@
                       </div>
                     </div>
                   </div>
+                  <div>
+                  <div class="form-group row" title="当分享失效时寻找资源">
+                    <label class="col-sm-2 col-form-label">更新资源</label>
+                    <div class="col-sm-10 col-form-label">
+                      <div class="form-check form-check-inline">
+                        <input type="checkbox" v-model="task.update_url">
+                        <label class="form-check-label">是</label>
+                      </div>
+                    </div>
+                  </div>
                   <div class="form-group row" v-if="Object.keys(getAvailablePlugins(formData.plugins)).length" title="单个任务的插件选项，具体键值由插件定义，见Wiki">
                     <label class="col-sm-2 col-form-label">插件选项</label>
                     <div class="col-sm-10">
@@ -547,6 +557,7 @@
           enddate: "",
           addition: {},
           ignore_extension: false,
+          update_url: true,
           runweek: [1, 2, 3, 4, 5, 6, 7]
         },
         run_log: "",
